--- a/frontend/src/app/components/product/product-read/product-read.component.html
+++ b/frontend/src/app/components/product/product-read/product-read.component.html
@@ -1,53 +1,49 @@
-
 <div class="mat-elevation-z4">
-  
-    <table mat-table [dataSource] = 'products' >
-      <!-- Id Column -->
-      <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef >Id</th>
-        <td mat-cell *matCellDef="let row">{{row.id}}</td>
-      </ng-container>
-  
-      <!-- Name Column -->
-      <ng-container matColumnDef="name">
-        <th mat-header-cell *matHeaderCellDef >Name</th>
-        <td mat-cell *matCellDef="let row">{{row.name}}</td>
-      </ng-container>
-  
-          <!-- price Column -->
-          <ng-container matColumnDef="price">
-            <th mat-header-cell *matHeaderCellDef >Preco</th>
-            <td mat-cell *matCellDef="let row">{{row.price}}</td>
-          </ng-container>
 
-                    <!-- Action Column -->
-                    <ng-container matColumnDef="action">
-                      <th mat-header-cell *matHeaderCellDef ></th>
-                      <td mat-cell *matCellDef="let row">
+  <table mat-table [dataSource]='products'>
+    <!-- Id Column -->
+    <ng-container matColumnDef="id">
+      <th mat-header-cell *matHeaderCellDef>Id</th>
+      <td mat-cell *matCellDef="let row">{{row.id}}</td>
+    </ng-container>
 
-                        <a routerLink="/products/update/{{row.id}}">
-                          <i class="material-icons edit">
-                            edit
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let row">{{row.name}}</td>
+    </ng-container>
 
-                          </i>
-                        </a>
+    <!-- price Column -->
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef>Preco</th>
+      <td mat-cell *matCellDef="let row">{{row.price}}</td>
+    </ng-container>
 
-                        <a routerLink="">
-                          <i class="material-icons delete">
-                            delete
+    <!-- Action Column -->
+    <ng-container matColumnDef="action">
+      <th mat-header-cell *matHeaderCellDef></th>
+      <td mat-cell *matCellDef="let row">
 
-                          </i>
-                        </a>
+        <a routerLink="/products/update/{{row.id}}">
+          <i class="material-icons edit">
+            edit
 
-                      </td>
-                    </ng-container>
-      
-  
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-  
-  </div>
+          </i>
+        </a>
+
+        <a routerLink="/products/delete/{{row.id}}">
+          <i class="material-icons delete">
+            delete
+
+          </i>
+        </a>
+
+      </td>
+    </ng-container>
 
 
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
 
+</div>
