--- a/frontend/src/app/components/product/product-update/product-update.component.html
+++ b/frontend/src/app/components/product/product-update/product-update.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <mat-card-title>Novo Produto</mat-card-title>
+    <mat-card-title>Editar Produto</mat-card-title>
 
     <form>
         <mat-form-field>
@@ -12,12 +12,8 @@
             <input matInput placeholder="ID" [(ngModel)]="product.id" name="id" disabled>
         </mat-form-field>
     </form>
-    <button mat-raised-button (click)="updateProduct()" color="primary">  Salvar </button>
+    <button mat-raised-button (click)="updateProduct()" color="primary"> Salvar </button>
+    <button mat-raised-button (click)="cancelProduct()"> Cancelar </button>
 
 
 </mat-card>
-
-
-
-
-  
